Push para cambiar de rama
El trabajo esta a medio hacer, pero necesito cambiar de rama, luego seguiré

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.sqlite-jdbc-3.21.0.jar=libs/sqlite-jdbc-3.21.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.21.0.jar}
+    ${file.reference.sqlite-jdbc-3.21.0.jar}:\
+    ${libs.JFreeChart.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
