Requisito 3.2.1 (falta testeo)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.21.0.jar}:\
-    ${libs.JFreeChart.classpath}
+    ${libs.JFreeChart.classpath}:\
+    ${libs.jfreeChart.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
